--- a/app/src/main/res/layout/activity_guard_track_list.xml
+++ b/app/src/main/res/layout/activity_guard_track_list.xml
@@ -46,6 +46,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_margin="10dp"
+        tools:listitem="@layout/item_guardtrack_list"
         android:layout_below="@id/appbar"
         android:id="@+id/guard_track_recycler"
         android:layout_width="match_parent"
@@ -65,8 +66,18 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:src="@drawable/plus"
-        app:fabSize="mini"
+        app:fabSize="normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <com.github.ybq.android.spinkit.SpinKitView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/spin_kit"
+        style="@style/SpinKitView.Large.Wave"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
+        app:SpinKit_Color="@color/colorAccent" />
 
 </RelativeLayout>
