--- a/app/src/main/res/layout/fragment_myhome.xml
+++ b/app/src/main/res/layout/fragment_myhome.xml
@@ -32,6 +32,7 @@
                     android:src="@drawable/logo" />
 
                 <ImageView
+                    android:visibility="gone"
                     android:id="@+id/logout_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
